--- a/back-cesizen/package.json
+++ b/back-cesizen/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "seed": "ts-node prisma/seed.ts",
+    "test":"jest"
   },
   "keywords": [],
   "author": "",
@@ -21,12 +23,16 @@
     "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
+    "@nestjs/testing": "^11.1.3",
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.18",
     "@types/express": "^5.0.2",
+    "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.15.29",
+    "jest": "^29.7.0",
     "prisma": "^6.9.0",
+    "ts-jest": "^29.3.4",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
   }
