--- a/front-cesizen/package.json
+++ b/front-cesizen/package.json
@@ -18,6 +18,8 @@
     "@angular/platform-browser": "^18.0.0",
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
+    "@sentry/angular": "^10.11.0",
+    "@sentry/tracing": "^7.120.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
